--- a/topo-logic-draft.tex
+++ b/topo-logic-draft.tex
@@ -382,7 +382,7 @@ This encourages us to focus on the efficiency of enumerating maximal antichains,
 The collection of all antichains in the downsets of a finite poset \(P\), under the inclusion ordering, corresponds to the free distributive lattice over \(P\).
 \end{lemma}
 \begin{proof}
-We have already defined the free distributive lattice as the up-sets of the downsets. Hence we need only show that up-sets are one-to-one with maximal antichains. In a finite lattice, every up-set corresponds to a unique set of basis elements, which are unordered with respect to one another, and hence form an antichain. Conversely, every antichain thus generates a distinct up-set.
+We have already defined the free distributive lattice as the up-sets of the downsets. Hence we need only show that up-sets are one-to-one with antichains. In a finite lattice, every up-set corresponds to a unique set of basis elements, which are unordered with respect to one another, and hence form an antichain. Conversely, every antichain thus generates a distinct up-set.
 \end{proof}
 
 By Sperner's Theorem, first published in 1928, the powerset of a set with \(n\) elements, under inclusion ordering, has a width of \(\binom{n}{\ceil{n/2}}\). (Because this picks out the central elements of Pascal's triangle, using ceiling or floor here yields the same sequence. For reasons that will become clear, contrary to standard convention, we prefer to use ceiling). In the other extreme, when all elements of the underlying poset are strictly ordered, then all elements of the resultant downset are also strictly ordered, and hence the width is 1. This yields a key insight -- the complexity of solving a dependency problem is not strictly a function of the quantity of events -- rather, it is jointly determined by the quantity of events and the degree of dependency induced by their underlying topological structure. Sperner's Theorem lies at the foundation of a field of combinatorics known as extremal set theory and is closely related to the methods and tools of algebraic combinatorics. Using techniques from these fields, we can give bounds that capture this general relationship between width, size, and dependency degree, such as the following result (proof in Appendix B).
