fixes from talk

--- a/topo-logic-draft.tex
+++ b/topo-logic-draft.tex
@@ -252,6 +252,11 @@ The set of DSCs is one-to-one with the set of finite posites of locales, equippe
 \end{proof}
 
 
+% TODO PROVE THIS. Really should be dlats such that a -> b /= a -> c if b /= c, i.e forall a bc a -> b <==> a -> c iff b == c
+% lattices bi-equiv to dscs. lattices with no top bottom bi-equiv to lattices with top bottom. lattices with no top bottom bi-equiv by birhkoff to locales with injective implication.
+
+% strong-leibnitzian
+
 % TODO extend to morphisms and have an equivalence of categories.
 
 
