--- a/topo-logic-draft.bib
+++ b/topo-logic-draft.bib
@@ -112,3 +112,11 @@
   year={2014},
   organization={ACM}
 }
+@inproceedings{merkle1987digital,
+  title={A digital signature based on a conventional encryption function},
+  author={Merkle, Ralph C},
+  booktitle={Conference on the theory and application of cryptographic techniques},
+  pages={369--378},
+  year={1987},
+  organization={Springer}
+}
