fixup big theorem

--- a/topo-logic-draft.bib
+++ b/topo-logic-draft.bib
@@ -120,3 +120,52 @@
   year={1987},
   organization={Springer}
 }
+@article{pratt1986modeling,
+  title={Modeling concurrency with partial orders},
+  author={Pratt, Vaughan},
+  journal={International Journal of Parallel Programming},
+  volume={15},
+  number={1},
+  pages={33--71},
+  year={1986},
+  publisher={Springer}
+}
+@misc{van1988troelstra,
+  title={Troelstra, Constructivism in Mathematics: An Introduction Vol. 1 and Vol. 2},
+  author={van Dalen, Dirk},
+  year={1988},
+  publisher={Elsevier Science, North-Holland}
+}
+@ARTICLE{schultz2017temporal,
+       author = {{Schultz}, Patrick and {Spivak}, David I.},
+        title = "{Temporal Type Theory: A topos-theoretic approach to systems and behavior}",
+      journal = {arXiv e-prints},
+     keywords = {Mathematics - Category Theory, Mathematics - Logic, 03G30, 18B25, 06B35, 93A30},
+         year = "2017",
+        month = "Oct",
+          eid = {arXiv:1710.10258},
+        pages = {arXiv:1710.10258},
+archivePrefix = {arXiv},
+       eprint = {1710.10258},
+ primaryClass = {math.CT},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2017arXiv171010258S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@book{gratzer2009lattice,
+  title={Lattice theory: First concepts and distributive lattices},
+  author={Gratzer, George},
+  year={2009},
+  publisher={Courier Corporation}
+}
+@article{moggi1991notions,
+  title={Notions of computation and monads},
+  author={Moggi, Eugenio},
+  journal={Information and computation},
+  volume={93},
+  number={1},
+  pages={55--92},
+  year={1991},
+  publisher={Elsevier}
+}
+
