--- a/topo-logic-draft.tex
+++ b/topo-logic-draft.tex
@@ -206,7 +206,7 @@ From the standpoint of concurrent semantics, this amounts to replacing sets of e
 
 The subscript "shorthand" used above renders each event as subscripted by the path of dependencies to reach it. Since that path itself consists of events, in a nontrivial chain, then those events too are subscripted, and soforth. Representing this computationally seems a bit of a chore. If we took each label and turned it into a hash, and then when taking sets of labels instead took hashes of their hashes, etc, then (with high probability) we could represent the same information in constant space rather than space geometric in the height of our poset.
 
-In fact, this operation -- augmenting a structure such that each element contains a hashed description of the path to reach it -- is relatively ubiquitous in modern software. It lies at the heart of the model of patches in distributed version control systems such as git, and is also used in blockchains. In those cases, while meets exist, joins do not. And further, in the blockchain case, it is even simpler because the goal is to restrict "truth" to a chosen linear path -- i.e. to avoid branching or "splits" in the chain. This construction is also the basic insight of the nix operating-system, as well as the "nix-like" store used by the Cabal build system for Haskell. In these cases, meets and joins both are used. The operation of generating the path information and taking a hash-chain of it is known as producing a \textbf{Merkle tree}\cite{merkle1987digital}. The idempotent distributive lattice completion, \(\BLc\) is then, in a sense, the \textit{non-probabilistic Merkle transformation} of a poset, and provides a formal description of what it means when we take an existing data structure and "turn it into a Merkle tree."
+In fact, this operation -- augmenting a structure such that each element contains a hashed description of the path to reach it -- is relatively ubiquitous in modern software. It lies at the heart of the model of patches in distributed version control systems such as git, and is also used in blockchains. In those cases, while meets exist, joins do not. And further, in the blockchain case, it is even simpler because the goal is to restrict "truth" to a chosen linear path -- i.e. to avoid branching or "splits" in the chain. This construction is also the basic insight of the nix operating-system, as well as the "nix-like" store used by the Cabal build system for Haskell. In these cases, meets and joins both are used. The operation of generating the path information and taking a hash-chain of it is known as producing a \textbf{Merkle tree}\cite{merkle1987digital}. The idempotent distributive lattice completion, \(\BLc\) is then, in a sense,  the \textit{non-probabilistic Merkle transformation} of a poset, and provides a formal description of what it means when we take an existing data structure and "turn it into a Merkle tree." \footnote{Note that it is non-probabilistic because the completion does not describe the hashing component of a Merkle tree, which is probablistic, and instead captures only the uniform algebraic structure in the case where hashing is unique.}
 
 It would be remiss of us not to mention, as well, that the operation of sending elements of a poset to their downsets, a key step in this transformation, is a special case of the Yoneda embedding. In particular, it is the Yoneda embedding for (0,1)-presheaves -- i.e. when \(C^{op} \rightarrow Set\) is decategorified to \(P^{op} \rightarrow Bool\). Categorically-inclined readers may bear this in mind the next time somebody asks them what practical purpose such constructions serve.
 
